--- a/ch5/src/main/AndroidManifest.xml
+++ b/ch5/src/main/AndroidManifest.xml
@@ -9,6 +9,28 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Likealionandroid">
         <activity
+            android:name=".sec2.Test2_1Activity"
+            android:exported="true" />
+        <activity
+            android:name=".sec1.Test1_3Activity"
+            android:exported="true"
+            android:theme="@style/MyActivityTheme">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".sec1.Test1_2Activity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
