--- a/ch9/src/main/AndroidManifest.xml
+++ b/ch9/src/main/AndroidManifest.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
+
+    <uses-permission android:name="android.permission.CALL_PHONE"/>
+<!--    위는 권한 밑은 디바이스의 기능 존재 확인-->
+    <uses-feature
+        android:name="android.hardware.telephony"
+        android:required="false" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -8,6 +15,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Likealionandroid">
+        <activity
+            android:name=".sec3.Test3_1Activity"
+            android:exported="true" />
         <activity
             android:name=".sec2.SomeActivity"
             android:exported="false" />
