--- a/ch10/src/main/AndroidManifest.xml
+++ b/ch10/src/main/AndroidManifest.xml
@@ -9,6 +9,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Likealionandroid">
         <activity
+            android:name=".Test2Activity"
+            android:exported="true" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
